@@ -9,23 +9,18 @@ namespace SimpleInjector.CodeSamples
     using System.Reflection;
     using SimpleInjector;
 
-    [DebuggerDisplay(
-        "DependencyContext (ServiceType: {ServiceType}, " + 
-        "ImplementationType: {ImplementationType})")]
+    [DebuggerDisplay("DependencyContext (ImplementationType: {ImplementationType})")]
     public class DependencyContext
     {
         internal static readonly DependencyContext Root = new DependencyContext();
 
-        internal DependencyContext(Type serviceType, Type implementationType,
-            ParameterInfo parameter) {
-            this.ServiceType = serviceType;
+        internal DependencyContext(Type implementationType, ParameterInfo parameter) {
             this.ImplementationType = implementationType;
             this.Parameter = parameter;
         }
 
         private DependencyContext() { }
 
-        public Type ServiceType { get; }
         public Type ImplementationType { get; }
         public ParameterInfo Parameter { get; }
     }
@@ -40,13 +35,13 @@ namespace SimpleInjector.CodeSamples
             Func<TService> rootFactory = () => contextBasedFactory(DependencyContext.Root);
 
             // Should always be transient!
-            container.Register<TService>(rootFactory, Lifestyle.Transient);
+            container.Register(rootFactory, Lifestyle.Transient);
 
             // Allow the Func<DependencyContext, TService> to be injected into parent types.
             container.ExpressionBuilding += (sender, e) => {
-                if (e.RegisteredServiceType != typeof(TService)) {
+                if (e.KnownImplementationType != typeof(TService)) {
                     var rewriter = new DependencyContextRewriter {
-                        ServiceType = e.RegisteredServiceType,
+                        ImplementationType = e.KnownImplementationType,
                         ContextBasedFactory = contextBasedFactory,
                         RootFactory = rootFactory,
                         Expression = e.Expression
@@ -61,21 +56,10 @@ namespace SimpleInjector.CodeSamples
         {
             private int parameterIndex;
 
-            internal Type ServiceType { get; set; }
             internal object ContextBasedFactory { get; set; }
             internal object RootFactory { get; set; }
             internal Expression Expression { get; set; }
-
-            internal Type ImplementationType {
-                get {
-                    var expression = this.Expression as NewExpression;
-
-                    if (expression == null)
-                        return this.ServiceType;
-                    
-                    return expression.Constructor.DeclaringType;
-                }
-            }
+            internal Type ImplementationType { get; set; }
 
             internal ParameterInfo Parameter {
                 get {
@@ -108,7 +92,6 @@ namespace SimpleInjector.CodeSamples
                     Expression.Constant(this.ContextBasedFactory),
                     Expression.Constant(
                         new DependencyContext(
-                            this.ServiceType, 
                             this.ImplementationType,
                             this.Parameter)));
             }
