@@ -24,6 +24,7 @@ namespace SimpleInjector
 {
     using System;
     using System.Collections.ObjectModel;
+    using System.ComponentModel;
     using System.Diagnostics;
     using System.Linq.Expressions;
     using SimpleInjector.Advanced;
@@ -36,16 +37,15 @@ namespace SimpleInjector
     /// currently being built.
     /// </summary>
     [DebuggerDisplay(nameof(ExpressionBuildingEventArgs) + " (" + 
-        nameof(RegisteredServiceType) + ": {SimpleInjector.Helpers.ToFriendlyName(" + nameof(RegisteredServiceType) + "), nq}, " +
+        nameof(KnownImplementationType) + ": {SimpleInjector.Helpers.ToFriendlyName(" + nameof(KnownImplementationType) + "), nq}, " +
         nameof(Expression) + ": {" + nameof(Expression) + "})")]
     public class ExpressionBuildingEventArgs : EventArgs
     {
         private Expression expression;
 
-        internal ExpressionBuildingEventArgs(Type registeredServiceType, Type knownImplementationType, 
+        internal ExpressionBuildingEventArgs(Type knownImplementationType, 
             Expression expression, Lifestyle lifestyle)
         {
-            this.RegisteredServiceType = registeredServiceType;
             this.KnownImplementationType = knownImplementationType;
             this.Lifestyle = lifestyle;
 
@@ -54,7 +54,20 @@ namespace SimpleInjector
 
         /// <summary>Gets the registered service type that is currently requested.</summary>
         /// <value>The registered service type that is currently requested.</value>
-        public Type RegisteredServiceType { get; }
+        [Obsolete(
+            "This property has been removed. Please use KnownImplementationType instead. " +
+            "See https://simpleinjector.org/depr3.",
+            error: true)]
+        [EditorBrowsable(EditorBrowsableState.Never)]
+        public Type RegisteredServiceType
+        {
+            get
+            {
+                throw new NotSupportedException(
+                    "This property has been removed. Please use KnownImplementationType instead. " +
+                    "See https://simpleinjector.org/depr3.");
+            }
+        }
 
         /// <summary>
         /// Gets the type that is known to be returned by the 
